--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -692,6 +692,9 @@ app:
       hybrid: Hybrid
       distant: Distant
   form:
+    switch_user:
+      username: Username
+      imitate: Imitate
     notification:
       label:
         message: 'Message'
