--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -820,6 +820,7 @@ admin:
     structures: Structures
     imports: Imports
     syllabus: Syllabus
+    ask_advice: Demande d'avis
     permissions: Permissions
     users: Utilisateurs
     administration: Administration
@@ -838,8 +839,6 @@ admin:
     year: Année
     structure: Composante
     code: Code
-    comment: Commentaire
-    process: Traité
   dashboard:
     syllabus_dashboard: Tableau de bord des syllabus
     published_syllabus: Syllabus publié(s)
